k8s/qod-web/deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qod-web
  labels:
    app: qod-web
    tier: ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qod-web
  template:
    metadata:
      labels:
        app: qod-web
    spec:
      containers:
        - name: qod-web
          image: quay.io/markus_roth/openshift-demo/qod-web:1.1.0
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
