k8s/qod-web/deployment/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: qod
  namespace: markus-roth-dev
spec:
  path: /
  to:
    kind: Service
    name: qod-web
  port:
    targetPort: http
